# mdbook-regex-replacer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
